fix: use object-fit: contains
- Using the `cover` property will have cases whereby it will be clipped to "fit" what will stretch the image whereby using `contains` it will be scaled to maintain aspect ratio what leads to the full image being displayed in our defined width/height without missing out on the full image.

--- a/scss/ui/_cards.scss
+++ b/scss/ui/_cards.scss
@@ -34,7 +34,7 @@
             position: absolute;
             border-radius: var(--br-3) var(--br-3) 0 0;
             object-position: center top;
-            object-fit: cover;
+            object-fit: contain;
         }
 
         &.no-screenshot svg {
